# Data_Structures_and_Algorithms_with_CMake

./: .clang-format  .cproject  .gitignore  .project  CMakeLists.txt  Doxyfile  Makefile  README.md  build.sh  cppcheck.sh  makefile  wget-log
config/: dsa.h  dsa_config.h
doxygen/docs/html/: annotated.html  classes.html  dir_000003_000025.html  dir_000004_000022.html  dir_000004_000025.html  dir_000005_000026.html  dir_000006_000026.html  dir_000016_000019.html  dir_000017_000000.html  dir_000017_000015.html  dir_000017_000016.html  dir_000017_000019.html  dir_000020_000019.html  dir_000022_000025.html  dir_000023_000019.html  dir_000024_000000.html  dir_000024_000020.html  dir_000026_000022.html  dir_000026_000025.html  dir_000027_000025.html  dir_000028_000025.html  dir_000028_000027.html  dir_067be23ab90eb434d77c1468044e4f2a.html  dir_06e997745c81b283081fac8c6d698cc0.html  dir_0fec2f0ebeba27d31b70656b55bb17c7.html  dir_0fec2f0ebeba27d31b70656b55bb17c7_dep.dot  dir_13e138d54eb8818da29c3992edef070a.html  dir_289a9db7f5db18fcebe2284c66b05f94.html  dir_30b5054062d1a450f1ae52192f56e6ad.html  dir_327cc30e1011c25343fb56cb67e92437.html  dir_3e4011b093e9094a5bbfad1e0d15235b.html  dir_3f9203f6165fcb11475a48a5ceee8e2d.html  dir_44f42edf5dd23d4deca0321224e9ce90.html  dir_44f42edf5dd23d4deca0321224e9ce90_dep.dot  dir_48c61abad44e2f181b0a6a33afb59c17.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_5c982d53a68cdbcd421152b4020263a9.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_70093cb3a9d1f8840af4e997fde867c3.html  dir_76cf5d2c64440c8b33b2b96569e4a2eb.html  (+76 more)
doxygen/docs/html/d0/d27/: a00239.html
doxygen/docs/html/d0/d89/: a00071.html
doxygen/docs/html/d0/dc0/: a00033.dot
doxygen/docs/html/d0/dc2/: a00104.html  a00104_a44409b47989dd823f395d62ba759032a_icgraph.dot  a00104_source.html
doxygen/docs/html/d0/de8/: a00133.html
doxygen/docs/html/d1/d22/: a00057.dot
doxygen/docs/html/d1/d2b/: a00018.dot
doxygen/docs/html/d1/d44/: a00098.html
doxygen/docs/html/d1/d6f/: a00063.dot
doxygen/docs/html/d1/d84/: a00052.dot
doxygen/docs/html/d1/d88/: a00128.html  a00128_a3ef388786e9a8e769d13af2601b592dc_icgraph.dot  a00128_a44f03f0124e59f6996da61946cc2a58e_icgraph.dot  a00128_a4820ba04ff5e9a474fe38ab6633d30a0_icgraph.dot  a00128_a644211a214ab000dcabd5582c52e0313_cgraph.dot  a00128_a644211a214ab000dcabd5582c52e0313_icgraph.dot  a00128_a780817a15f2437360bd593c8fa7a1481_cgraph.dot  a00128_aed50601fbdaea8fc0fef0c61cf877809_icgraph.dot  a00128_source.html
doxygen/docs/html/d1/dc1/: a00092.html
doxygen/docs/html/d1/dd6/: a00108.dot
doxygen/docs/html/d1/dea/: a00054.dot
doxygen/docs/html/d2/d1f/: a00083.html  a00083_a58ec279183697abbd5d3efea3442d4e5_icgraph.dot  a00083_source.html
doxygen/docs/html/d2/d79/: a00051.dot
doxygen/docs/html/d2/d82/: a00142.html
doxygen/docs/html/d2/de7/: a00014.html
doxygen/docs/html/d3/d00/: a00113.html  a00113_a0915ac11fce4fd69d1c961c7cd050f8e_icgraph.dot
doxygen/docs/html/d3/d2a/: a00195.html
doxygen/docs/html/d3/d32/: a00105.dot
doxygen/docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  defines_a.js  defines_b.js  defines_c.js  (+56 more)
doxygen/docs/latex/: annotated.tex  dir_067be23ab90eb434d77c1468044e4f2a.tex  dir_067be23ab90eb434d77c1468044e4f2a_dep.dot  dir_06e997745c81b283081fac8c6d698cc0.tex  dir_06e997745c81b283081fac8c6d698cc0_dep.dot  dir_0fec2f0ebeba27d31b70656b55bb17c7.tex  dir_13e138d54eb8818da29c3992edef070a.tex  dir_13e138d54eb8818da29c3992edef070a_dep.dot  dir_30b5054062d1a450f1ae52192f56e6ad.tex  dir_327cc30e1011c25343fb56cb67e92437.tex  dir_327cc30e1011c25343fb56cb67e92437_dep.dot  dir_3e4011b093e9094a5bbfad1e0d15235b.tex  dir_3f9203f6165fcb11475a48a5ceee8e2d.tex  dir_44f42edf5dd23d4deca0321224e9ce90.tex  dir_48c61abad44e2f181b0a6a33afb59c17.tex  dir_48c61abad44e2f181b0a6a33afb59c17_dep.dot  dir_5c982d53a68cdbcd421152b4020263a9.tex  dir_5c982d53a68cdbcd421152b4020263a9_dep.dot  dir_70093cb3a9d1f8840af4e997fde867c3.tex  dir_76cf5d2c64440c8b33b2b96569e4a2eb.tex  dir_7c33f78fd5be8fe1ebf0dc422256e91e.tex  dir_9184a18d74d6ad4f31f961c2cb018606.tex  dir_9796e9f2cb75325b8d5ccef8d2f8ff28.tex  dir_9796e9f2cb75325b8d5ccef8d2f8ff28_dep.dot  dir_9f351d46ce3cc29445a41dc3a31e6919.tex  dir_a25329512db9c9cb8f0c7821a3f344cb.tex  dir_a25329512db9c9cb8f0c7821a3f344cb_dep.dot  dir_a5212ee8b6a8d592d027941e58e3651c.tex  dir_ab51a11a65415835ab0b627ec1ba1885.tex  dir_ab51a11a65415835ab0b627ec1ba1885_dep.dot  dir_bb1b521853a9c46347182a9d10420771.tex  dir_bb1b521853a9c46347182a9d10420771_dep.dot  dir_c04532dbaa41c109f143a7b32ad4206b.tex  dir_c60d9f7f7769711d1efda13fd847579c.tex  dir_dab45044bec314d3926b50d31a344369.tex  dir_e9d2c87952e388da8e570b477721a3fc.tex  dir_ec59a4480e9f11002c21152160e26b2e.tex  dir_ec59a4480e9f11002c21152160e26b2e_dep.dot  files.tex  namespaces.tex  (+1 more)
graph/: .cproject  .project  CMakeLists.txt  graph.c  graph.h
linkedlist/: .cproject  .project  CMakeLists.txt  c_header.h  linkedlist.c  linkedlist.h
list/: CMakeLists.txt  dsa.h  list.c  list.h  log.txt
main/: CMakeLists.txt  dsa_main.c
queue/: CMakeLists.txt  circular.c  queue.c  queue.h
sorting/: .cproject  .project  CMakeLists.txt  sorting.c  sorting.h
stack/: CMakeLists.txt  STACK.md  dsa_main.c  stack.c  stack.h
stringg/: CMakeLists.txt  stringg.c  stringg.h
test/: CMakeLists.txt  list_ut.c  test_main.c
test/include/: list_ut.h  queue_ut.h  stack_ut.h
test/list/: test_list.c
test/queue/: test_queue.c
test/stack/: test_stack.c
test/stringg/: test_stringg.c
test/test_linkedlist/: test_linkedlist.c
testing_lib/: CMakeLists.txt
tree/: .cproject  .project  CMakeLists.txt  binary_tree.c  c_sourse.c  tree.c  tree.h
(+321 files in other folders)
